--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">NEXA OS</string>
-    <string name="title_activity_main">NEXA OS</string>
-    <string name="package_name">com.nexaos.app</string>
-    <string name="custom_url_scheme">com.nexaos.app</string>
+    <string name="app_name">NexaAI</string>
+    <string name="title_activity_main">NexaAI</string>
+    <string name="package_name">dev.nexa.ai</string>
+    <string name="custom_url_scheme">dev.nexa.ai</string>
 </resources>
